# pyshmio

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: bindings.cpp
src/lib/: shmio
tests/: test_pyshmio.py  test_pyshmio_create.py  test_pyshmio_open.py  test_pyshmio_push_pull.py
